[package]
name = "interprust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

opencv = "0.60"
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"]}
tokio = { version = "1.0.0", features = ["full"] }
futures-channel = "0.3"
futures-util = "0.3"
tungstenite = "0.16.0"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"

